--- a/doc/CHANGELOG-1.1
+++ b/doc/CHANGELOG-1.1
@@ -1,6 +1,7 @@
 
 Version 1.1 (in progress)
 - TS_Resource: lock() function added. Deprecating get()
+- TS_Queue: removinf break_popping() from public section. stop() function introduced instead.
 - Visual Studio build fixes.
 - OpenLibrary shared libraries versioning.
 - cleanups in cmake files:
