--- a/doc/CHANGELOG-1.1
+++ b/doc/CHANGELOG-1.1
@@ -1,9 +1,10 @@
 
 Version 1.1 (in progress)
 - TS_Resource: lock() function added. Deprecating get()
-- TS_Queue: Removing break_popping() from public section. stop() function introduced instead.
-            TS_Queue should now keep working after stop() is called. Any new insertion reenabled queue.
-            Introducing threadsWaiting4Data() and waitForData()
+- TS_Queue:
+    * Removing break_popping() from public section. stop() function introduced instead.
+    * TS_Queue should now keep working after stop() is called. Any new insertion reenabled queue.
+    * Introducing threadsWaiting4Data() and waitForData()
 - Visual Studio build fixes.
 - OpenLibrary shared libraries versioning.
 - cleanups in cmake files:
