Adding information about license used (LGPLv3).

--- a/README
+++ b/README
@@ -1,4 +1,6 @@
 
+Open Library is available under LGPLv3 license.
+
 available unusual make targets:
 test - runs test
 autogenerate - regenerate platform independend files
