--- a/doc/CHANGELOG-1.1
+++ b/doc/CHANGELOG-1.1
@@ -19,3 +19,4 @@ Version 1.1 (in progress)
 TODO:
 - Remove current system of sublibraries management. Each library should be free to build itself as it wish.
 - Move TS_Queue and TS_Resource to new lib: putils
+- introduce debug/release versions in parallel?
