--- a/doc/CHANGELOG-1.1
+++ b/doc/CHANGELOG-1.1
@@ -22,3 +22,4 @@ Version 1.1 (in progress)
 
 TODO:
 - introduce debug/release versions in parallel?
+- make sure libraries without target (no sources, just headers) are working fine (can be find with find_package in projects using them)
